--- a/src/assets/helpers/_variables.scss
+++ b/src/assets/helpers/_variables.scss
@@ -68,7 +68,7 @@ $colors: (
 
 // scss-docs-start theme-color-variables
 $primary:       #DEBC8C; // $blue !default;
-$secondary:     #F3F8FB;// $gray-600 !default;
+$secondary:     #b79664; //$gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
