產品詳細頁

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/functions';
 
 @import './helpers/base';
+@import './components/cartQtyIpt';
 @import './helpers/variables';
 @import '~bootstrap/scss/bootstrap';
