--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -2,6 +2,7 @@
 
 @import './helpers/base';
 @import './helpers/swiper-vars';
+@import './components/banner';
 @import './components/navigation';
 @import './components/cartQtyIpt';
 @import './helpers/variables';
