購物車流程樣式

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -5,6 +5,6 @@
 @import './helpers/animation';
 @import './components/banner';
 @import './components/navigation';
-@import './components/cartQtyIpt';
+@import './components/cart';
 @import './helpers/variables';
 @import '~bootstrap/scss/bootstrap';
