--- a/src/assets/components/_cart.scss
+++ b/src/assets/components/_cart.scss
@@ -27,6 +27,10 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  transition: all .3s;
+  &:hover {
+    background: #debc8c;
+  }
 }
 
 
