--- a/src/assets/helpers/_base.scss
+++ b/src/assets/helpers/_base.scss
@@ -1,5 +1,11 @@
-img{max-width:100%;height:auto;}
-html,body {overflow-x: hidden;}
+img{
+  max-width:100%;
+  height:auto;
+}
+html,
+body {
+  overflow-x: hidden;
+}
 .not-allowed {
   cursor: not-allowed !important;
   pointer-events: unset !important;
